--- a/package.json
+++ b/package.json
@@ -10,17 +10,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
-    "@studio-freight/react-lenis": "^0.0.47",
-    "@types/locomotive-scroll": "^4.1.3",
-    "@types/scroll-lock": "^2.1.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "scroll-lock": "^2.1.5"
+    "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.265",
