--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@types/locomotive-scroll": "^4.1.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^11.2.10",
+    "framer-motion-3d": "^11.2.10",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.265",
