--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.12.1",
+    "@hookform/resolvers": "^5.2.2",
     "@nextui-org/react": "^2.4.8",
+    "@react-email/components": "^0.5.6",
+    "@react-email/render": "^1.3.2",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/locomotive-scroll": "^4.1.4",
@@ -21,7 +25,10 @@
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "three": "^0.171.0"
+    "react-hook-form": "^7.65.0",
+    "resend": "^6.1.2",
+    "three": "^0.171.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.265",
