--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "@hcaptcha/react-hcaptcha": "^1.12.1",
@@ -18,13 +18,13 @@
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/locomotive-scroll": "^4.1.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
-    "framer-motion-3d": "^11.2.10",
+    "framer-motion": "^11.15.0",
+    "framer-motion-3d": "^11.15.0",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "next": "^16.1.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "resend": "^6.1.2",
     "three": "^0.171.0",
@@ -34,13 +34,13 @@
     "@iconify/json": "^2.2.265",
     "@iconify/tailwind": "^1.1.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2",
+    "eslint-config-next": "^16.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.1.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
